# rust-examples

./: .gitignore  README.md
examples/actix-web-hello-world/: Cargo.toml
examples/actix-web-hello-world/src/: main.rs
examples/actix-web-json-processing/: Cargo.toml
examples/actix-web-json-processing/src/: main.rs
examples/hello-world/: Cargo.toml
examples/kafka-producer-consumer/: Cargo.toml  README.md
examples/kafka-producer-consumer/src/: lib.rs  main.rs
examples/kafka-producer-consumer/src/consumer/: consumer.rs  mod.rs
examples/kafka-producer-consumer/src/producer/: mod.rs  producer.rs
examples/kafka-producer-consumer/src/schemas/: message.avro
examples/todo-web-app/: Cargo.toml  README.md  refinery.toml  refinery_test.toml
examples/todo-web-app/migrations/: V1__initial.sql
examples/todo-web-app/src/: config.rs  lib.rs  main.rs
examples/todo-web-app/src/controller/: index.rs  mod.rs  todo.rs
examples/todo-web-app/src/dao/: db_context.rs  mod.rs  todo.rs
examples/todo-web-app/src/model/: mod.rs  todo.rs
examples/todo-web-app/tests/: test.rs
examples/todo-web-app/tests/controller_test/: index_test.rs  mod.rs  todo_test.rs
