[package]
name = "kafka_producer_consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.9", features = ["derive"] }
avro = { version = "0.2.1" }
tokio = { version = "1.17.0", features = ["full"] }
rdkafka = { version = "0.28", features = ["cmake-build"] }
log = { version = "0.4", features = ["std", "serde"] }
env_logger = { version = "0.9.0" }
